[Coordinated Graphics] Test fast/fixed-layout/fixed-layout.html crashes in debug https://bugs.webkit.org/show_bug.cgi?id=160117

Reviewed by Michael Catanzaro.

The problem is that WebPage has its own m_useFixedLayout that is only updated when changed from the UI
process. However, layout tests doing internals.setUseFixedLayout() change the frame view directly, and the
WebPage doesn't notice it.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::setFixedVisibleContentRect): Deleted.
(WebKit::WebPage::sendViewportAttributesChanged): Change the assert to check the main FrameView is in fixed
layout mode.
* WebProcess/WebPage/WebPage.h:

Canonical link: https://commits.webkit.org/178351@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203722 268f45cc-cd09-0410-ab3c-d52691b4dbfc